--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Is this actually working?</h1>
+    <h1>Sketch Pad</h1>
     <div id="container" class="container">
     </div>
 
