Add styling only

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 squares.forEach((div) => div.remove());
                 for (let i = 0; i < (size * size); i++){
                 let cell = document.createElement('div');  
-                cell.addEventListener('mouseover', () => cell.style.backgroundColor = 'black');
+                cell.addEventListener('mouseover', () => cell.style.backgroundColor = 'navy');
                 cell.classList.add('cell');
                 cell.style.backgroundColor = "white";
                 cell.style.height = `${960/size}px`;
